Fixed Info Plugin overflow

--- a/plugins/css/infoPlugin.css
+++ b/plugins/css/infoPlugin.css
@@ -17,6 +17,4 @@
   font-size: 18px;
   text-shadow: 2px 2px #333333;
   padding: 20px;
-  height: 250px;
-  overflow-y: scroll;
 }
